fixed broken layout safari

--- a/css/style.css
+++ b/css/style.css
@@ -369,8 +369,7 @@ section {
 
 .diploma {
   grid-column: center-start / center-end;
-  margin-left: auto;
-  margin-right: auto; }
+  text-align: center; }
   .diploma__img {
     max-width: 40rem; }
 
