--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -70,8 +70,7 @@
 
 .diploma {
     grid-column: center-start / center-end;
-    margin-left: auto;
-    margin-right: auto;
+    text-align: center;
 
     &__img {
         max-width: 40rem;
